--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,7 +12,9 @@
 		"build-storybook": "build-storybook -s public"
 	},
 	"alias": {
-		"react-dom": "@hot-loader/react-dom"
+		"react-dom": "@hot-loader/react-dom",
+		"*": "./src/*",
+		"styles": "./styles"
 	},
 	"repository": {
 		"type": "git",
@@ -32,10 +34,14 @@
 		"@storybook/react": "^5.3.13",
 		"babel-loader": "^8.1.0",
 		"babel-preset-react-app": "^9.1.2",
+		"css-loader": "^3.5.3",
+		"node-sass-alias-importer": "^1.0.0",
 		"parcel": "^1.12.4",
 		"parcel-bundler": "^1.12.4",
 		"react-hot-loader": "^4.12.20",
 		"sass": "^1.26.3",
+		"sass-loader": "^8.0.2",
+		"style-loader": "^1.2.1",
 		"typescript": "^3.8.3"
 	},
 	"dependencies": {
